--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>User Profile</title>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 </head>
 <body>
   <h2>Update Profile</h2>
@@ -18,11 +19,21 @@
   {% endwith %}
 
   <form method="POST" enctype="multipart/form-data">
-    <label>Preferred Job Title:</label><br>
-    <input type="text" name="title" value="{{ profile.preferred_title if profile else '' }}"><br><br>
+    <label for="preferred_title">Preferred Job Titles:</label>
+    <select id="preferred_title" name="title" multiple style="width: 100%;">
+      {% for job in jobs|unique(attribute='title') %}
+        <option value="{{ job.title }}" {% if profile and profile.preferred_title and job.title in profile.preferred_title %}selected{% endif %}>{{ job.title }}</option>
+      {% endfor %}
+    </select>
+    <br><br>
 
-    <label>Preferred Location:</label><br>
-    <input type="text" name="location" value="{{ profile.preferred_location if profile else '' }}"><br><br>
+    <label for="preferred_location">Preferred Locations:</label>
+    <select id="preferred_location" name="location" multiple style="width: 100%;">
+      {% for job in jobs|unique(attribute='company') %}
+        <option value="{{ job.company }}" {% if profile and profile.preferred_location and job.company in profile.preferred_location %}selected{% endif %}>{{ job.company }}</option>
+      {% endfor %}
+    </select>
+    <br><br>
 
     <label>Resume Upload (PDF/DOCX):</label><br>
     {% if profile and profile.resume_filename %}
@@ -32,5 +43,13 @@
 
     <button type="submit">Save Profile</button>
   </form>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('#preferred_title').select2({ tags: true, placeholder: "Type or select multiple titles" });
+      $('#preferred_location').select2({ tags: true, placeholder: "Type or select locations" });
+    });
+  </script>
 </body>
 </html> 
