Add sticky navbar across all pages with navigation links

--- a/templates/applications.html
+++ b/templates/applications.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>All Applications</title></head>
+{% include 'navbar.html' %}
 <body>
   <h2>Your Job Application History</h2>
   <p>
