--- a/templates/manual_jobs.html
+++ b/templates/manual_jobs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>Manual Apply Jobs</title></head>
+{% include 'navbar.html' %}
 <body>
   <h2>🛠 Manual Job Applications</h2>
   <p>
