--- a/templates/batch_apply.html
+++ b/templates/batch_apply.html
@@ -5,6 +5,7 @@
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/css/select2.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/js/select2.min.js"></script>
+  {% include 'navbar.html' %}
 </head>
 <body>
   <h2>📦 Batch Apply to Matching Jobs</h2>
