--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Dashboard</title>
+  {% include 'navbar.html' %}
 </head>
 <body>
   <h2>Welcome, {{ current_user.email }}</h2>
