--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>User Profile</title>
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  {% include 'navbar.html' %}
 </head>
 <body>
   <h2>Update Profile</h2>
