--- a/templates/login.html
+++ b/templates/login.html
@@ -5,11 +5,17 @@
 </head>
 <body>
     <h2>Login</h2>
+
     <form method="POST">
-        <input type="email" name="email" placeholder="Email" required><br><br>
-        <input type="password" name="password" placeholder="Password" required><br><br>
-        <button type="submit">Login</button>
+      <label>Email:</label><br>
+      <input type="email" name="email" required><br><br>
+
+      <label>Password:</label><br>
+      <input type="password" name="password" required><br><br>
+
+      <button type="submit">Login</button>
     </form>
+
     <p>Don’t have an account? <a href="{{ url_for('register') }}">Register now</a>.</p>
 </body>
 </html> 
